--- a/src/content/_head.pug
+++ b/src/content/_head.pug
@@ -1,3 +1,6 @@
 head
   title Srijan
+  meta(name="viewport" content="width=device-width, initial-scale=1")
+  meta(http-equiv="Content-Type" content="text/html; charset=utf-8")
   link(rel="stylesheet", type="text/css", href=stylesheet)
+  link(href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet")
