--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,4 +1,106 @@
+@import _variables
+
 *
   margin: 0
   padding: 0
+  outline: none
   box-sizing: border-box
+
+body
+  font-family: "Montserrat", sans-serif
+  font-size: 16px
+  line-height: 1.5
+  min-height: 100vh
+  overflow-x: hidden
+  background-image: url(#{mapImg("/images/www/pattern.svg")})
+  background-size: 30px
+  color: #222
+  width: 100vw
+
+.flex
+  display: flex
+  flex-direction: column
+  align-items: center
+  justify-content: center
+
+a
+  text-decoration: none
+
+img
+  max-width: 100%
+
+h1, h2
+  text-transform: uppercase
+  font-size: 32px
+  font-size: calc(24px + 10vw)
+  margin: 1rem auto
+  line-height: 1.1
+  border-bottom: 8px solid #222
+
+h2
+  font-size: 24px
+  display: inline-block
+  font-size: calc(18px + 3vw)
+
+.subtitle
+  margin: 0.5em auto
+  max-width: 600px
+  text-align: center
+  font-size: 1.4em
+
+@import _header
+@import _button
+
+.cta
+  // call to action
+  display: flex
+  flex-direction: column
+  align-items: center
+
+.small
+  color: #444
+  font-family: monospace
+  line-height: 1
+  font-size: 0.8rem
+
+.section
+  width: 100%
+  position: relative
+  margin: 10vh auto 0
+  padding: 10vw 5vh
+  background-image: url(#{mapImg("/images/www/pattern.svg")})
+  background-size: 20px
+
+  &:before
+    content: ""
+    display: block
+    position: absolute
+    top: 50%
+    left: 50%
+    width: 120vw
+    height: 100%
+    z-index: -1
+    transform: translate(-50%, -50%) rotate(-10deg) skew(-10deg)
+
+.section.about
+  color: #fafafa
+
+  h2
+    border-color: #eaeaea
+
+  &:before
+    background-color: #111
+
+.section.team
+  top: -4vh
+
+  &::before
+    background-color: $color-tl
+
+@import _about
+@import _team
+
+
+@media screen and (max-width: 640px)
+  body
+    font-size: 13px
