--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -44,7 +44,8 @@ h2
 
 .subtitle
   margin: 0.5em auto
-  max-width: 600px
+  max-width: 700px
+  padding: 1vw
   text-align: center
   font-size: 1.4em
 
@@ -68,19 +69,19 @@ h2
   position: relative
   margin: 10vh auto 0
   padding: 10vw 5vh
-  background-image: url(#{mapImg("/images/www/pattern.svg")})
-  background-size: 20px
 
   &:before
     content: ""
     display: block
     position: absolute
-    top: 50%
-    left: 50%
+    top: 0
+    left: -10vw
     width: 120vw
     height: 100%
     z-index: -1
-    transform: translate(-50%, -50%) rotate(-10deg) skew(-10deg)
+    background-image: url(#{mapImg("/images/www/pattern.svg")})
+    background-size: 20px
+    transform: rotate(-10deg) skew(-10deg)
 
 .section.about
   color: #fafafa
