Add about srijan

--- a/src/content/_about.pug
+++ b/src/content/_about.pug
@@ -1,4 +1,5 @@
 .flex.section.about
   h2 About
-  p Srijan is the annual magazine of Department of Computer Science, University of Delhi.
-  p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  p Srijan means creation. Srijan is the annual magazine of Department of Computer Science, University of Delhi.
+  p Srijan started with an aim to capture the infinite advancements in technology and lay out a bigger picture in a few words. Since then, we have been trying to capture and highlight what happened in the past year and what lies ahead. Srijan aims at giving a complete roundup of the emerging tech within the field of computer science.
+  p The theme for this year's edition of Srijan is CES 2018. It will be released at Sankalan on April 7th, 2018.
