--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -61,8 +61,14 @@ h2
 .small
   color: #444
   font-family: monospace
-  line-height: 1
+  line-height: 1.3
   font-size: 0.8rem
+
+  a
+    color: $color-bl
+
+    &:hover
+      text-decoration: underline
 
 .section
   width: 100%
@@ -100,6 +106,7 @@ h2
 
 @import _about
 @import _team
+@import _old
 @import _footer
 
 @media screen and (max-width: 640px)
