--- a/src/content/_previous-editions.pug
+++ b/src/content/_previous-editions.pug
@@ -6,6 +6,7 @@ mixin item(text, link)
     a.close(title="Close" id="close") ❌
     h2 Previous Editions
     .versions
+      a.button(href="https://drive.google.com/file/d/1Z_k1JsiQCevExEwUxY3ykX-3aXOx7MWU/view") Vol. 8 (2018)
       a.button(href="http://www.cs.du.ac.in/uploads/srijan/srijanVol7_2017.pdf") Vol. 7 (2017)
       a.button(href="http://www.cs.du.ac.in/uploads/srijan/srijanVol6_2016.pdf") Vol. 6 (2016)
       a.button(href="#") Vol. 5 (2015)
