--- a/src/content/index.pug
+++ b/src/content/index.pug
@@ -6,8 +6,8 @@ html
     p.subtitle
       | Srijan is the annual magazine of Department of Computer Science,  University of Delhi.
     .cta
-      a.button(href="") Read The Magazine
-      span.small Vol. 7 (2017)
+      a.button(href="https://drive.google.com/file/d/1Z_k1JsiQCevExEwUxY3ykX-3aXOx7MWU/view") Read The Magazine
+      span.small Vol. 8 (2018)
       span.small
         | (
         a(href="#old" id="showOld") See previous editions
