--- a/src/content/_footer.pug
+++ b/src/content/_footer.pug
@@ -1,5 +1,3 @@
 footer
-  p Copyright © 2018. Made with ♥ by&nbsp;
-    a(href="https://github.com/sidvishnoi" data-id="srijan-footer-dev")
-      span(style="white-space: nowrap") Sudhanshu Vishnoi
+  p Copyright © Srijan 2019.
   p Delhi University Computer Science Society (DUCSS)
